# automatic-license-plate-recognition

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  logging_helper.py  main.py  plate_processor.py  results_generator.py
